--- a/R/Advanced Statistical Programming/Final_Project.Rmd
+++ b/R/Advanced Statistical Programming/Final_Project.Rmd
@@ -2,7 +2,7 @@
 title: "Final Project"
 author: "Taylor Last"
 date: "12/7/2020"
-output: html_document
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
